; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_cf-lexer.c_cf_lexer_free.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_cf-lexer.c_cf_lexer_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cf_lexer = type { i32, i32*, i32*, i32*, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cf_lexer_free(%struct.cf_lexer* %0) #0 {
  %2 = alloca %struct.cf_lexer*, align 8
  store %struct.cf_lexer* %0, %struct.cf_lexer** %2, align 8
  %3 = load %struct.cf_lexer*, %struct.cf_lexer** %2, align 8
  %4 = getelementptr inbounds %struct.cf_lexer, %struct.cf_lexer* %3, i32 0, i32 3
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @bfree(i32* %5)
  %7 = load %struct.cf_lexer*, %struct.cf_lexer** %2, align 8
  %8 = getelementptr inbounds %struct.cf_lexer, %struct.cf_lexer* %7, i32 0, i32 2
  %9 = load i32*, i32** %8, align 8
  %10 = call i32 @bfree(i32* %9)
  %11 = load %struct.cf_lexer*, %struct.cf_lexer** %2, align 8
  %12 = getelementptr inbounds %struct.cf_lexer, %struct.cf_lexer* %11, i32 0, i32 5
  %13 = call i32 @lexer_free(i32* %12)
  %14 = load %struct.cf_lexer*, %struct.cf_lexer** %2, align 8
  %15 = getelementptr inbounds %struct.cf_lexer, %struct.cf_lexer* %14, i32 0, i32 4
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @da_free(i32 %16)
  %18 = load %struct.cf_lexer*, %struct.cf_lexer** %2, align 8
  %19 = getelementptr inbounds %struct.cf_lexer, %struct.cf_lexer* %18, i32 0, i32 3
  store i32* null, i32** %19, align 8
  %20 = load %struct.cf_lexer*, %struct.cf_lexer** %2, align 8
  %21 = getelementptr inbounds %struct.cf_lexer, %struct.cf_lexer* %20, i32 0, i32 2
  store i32* null, i32** %21, align 8
  %22 = load %struct.cf_lexer*, %struct.cf_lexer** %2, align 8
  %23 = getelementptr inbounds %struct.cf_lexer, %struct.cf_lexer* %22, i32 0, i32 1
  store i32* null, i32** %23, align 8
  %24 = load %struct.cf_lexer*, %struct.cf_lexer** %2, align 8
  %25 = getelementptr inbounds %struct.cf_lexer, %struct.cf_lexer* %24, i32 0, i32 0
  store i32 0, i32* %25, align 8
  ret void
}

declare dso_local i32 @bfree(i32*) #1

declare dso_local i32 @lexer_free(i32*) #1

declare dso_local i32 @da_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
